Fix issue with stretched texture in UV editor Fix launch issue after folding UV panel Fix some panels not folding correctly Make buildGrid available in global scope again Fix incorrect title for display presets dialog Fix #1354 Delete in main menu only works for elements/groups

--- a/css/panels.css
+++ b/css/panels.css
@@ -101,7 +101,7 @@
 		flex-grow: 0;
 	}
 	.panel.folded > *:not(.panel_handle) {
-		display: none;
+		display: none !important;
 	}
 
 	.panel[order]::before {
